--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "three": "^0.145.0"
+    "nuxt": "^2.15.8"
   },
   "devDependencies": {
     "sass": "^1.47.0",
